--- a/AppFakeStore/Views/MainPage.xaml
+++ b/AppFakeStore/Views/MainPage.xaml
@@ -16,15 +16,47 @@
                 
                 <Label Text="MENU DE OPCIONES" Grid.ColumnSpan="2" Grid.Row="0" />
 
-                <Button Grid.Row="1" Text="Productos" HeightRequest="85" Command="{Binding GoToProductoListaCommand}" />
-                <Button Grid.Column="1" Grid.Row="1" Text="Categorías" HeightRequest="85"/>
-                <Button Grid.Column="0" Grid.Row="2" Text="Usuarios" HeightRequest="85"/>
-                <Button Grid.Column="1" Grid.Row="2" Text="Clientes" HeightRequest="85"/>
-                <Button Grid.Column="0" Grid.Row="3" Text="Envios" HeightRequest="85"/>
-                <Button Grid.Column="1" Grid.Row="3" Text="Mensajes" HeightRequest="85"/>
+                <Button ContentLayout="Top, 5" Grid.Row="1" Text="Productos" HeightRequest="85" Command="{Binding GoToProductoListaCommand}">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xe1bd;" />
+                    </Button.ImageSource>
+                </Button>
+                <Button ContentLayout="Top, 5" Grid.Column="1" Grid.Row="1" Text="Categorías" HeightRequest="85">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xf05b;" />
+                    </Button.ImageSource>
+                </Button>
+                <Button ContentLayout="Top, 5" Grid.Column="0" Grid.Row="2" Text="Usuarios" HeightRequest="85">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xe7fd;" />
+                    </Button.ImageSource>
+                </Button>
+                <Button ContentLayout="Top, 5" Grid.Column="1" Grid.Row="2" Text="Clientes" HeightRequest="85">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xf233;" />
+                    </Button.ImageSource>
+                </Button>
+                <Button ContentLayout="Top, 5" Grid.Column="0" Grid.Row="3" Text="Envios" HeightRequest="85">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xf86b;" />
+                    </Button.ImageSource>
+                </Button>
+                <Button ContentLayout="Top, 5" Grid.Column="1" Grid.Row="3" Text="Mensajes" HeightRequest="85">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xe0b7;" />
+                    </Button.ImageSource>
+                </Button>
 
-                <Button Grid.Column="0" Grid.Row="4" Text="Acerca" HeightRequest="85" Command="{Binding GoToAcercaCommand}"/>
-                <Button Grid.Column="1" Grid.Row="4" Text="Salir" HeightRequest="85" Command="{Binding ExitCommand}"/>
+                <Button ContentLayout="Top, 5" Grid.Column="0" Grid.Row="4" Text="Acerca" HeightRequest="85" Command="{Binding GoToAcercaCommand}">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xe88e;" />
+                    </Button.ImageSource>
+                </Button>
+                <Button ContentLayout="Top, 5" Grid.Column="1" Grid.Row="4" Text="Salir" HeightRequest="85" Command="{Binding ExitCommand}">
+                    <Button.ImageSource>
+                        <FontImageSource Size="22" FontFamily="MaterialDesignIcons" Glyph="&#xe9ba;" />
+                    </Button.ImageSource>
+                </Button>
 
 
             </Grid>            
