--- a/AppFakeStore/Views/ProductoDetallePage.xaml
+++ b/AppFakeStore/Views/ProductoDetallePage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppFakeStore.Views.ProductoDetallePage"
              xmlns:vm="clr-namespace:AppFakeStore.ViewModels"
+             xmlns:models="clr-namespace:AppFakeStore.Models"
              x:DataType="vm:ProductoDetalleViewModel"
              Title="{Binding Title}">
     <ScrollView>
@@ -13,23 +14,64 @@
             <Label Text="Nombre" Grid.Column="0" Grid.Row="0" VerticalOptions="Center"/>
             <Entry Text="{Binding Producto.title}" Grid.Column="1" Grid.Row="0" />
 
-                <Label Text="Descripción" Grid.Column="0" Grid.Row="1" VerticalOptions="Center"/>
-            <Editor Text="{Binding Producto.description}" MaxLength="1000" Grid.Column="1" Grid.Row="1" />
+            <Label 
+                Text="Descripción" 
+                Grid.Column="0" 
+                Grid.Row="1" 
+                VerticalOptions="Center"/>
+            
+            <Editor 
+                Text="{Binding Producto.description}" 
+                MaxLength="1000" 
+                Grid.Column="1" 
+                Grid.Row="1" />
 
-                <Label Text="Precio" Grid.Column="0" Grid.Row="2" VerticalOptions="Center"/>
-            <Entry Text="{Binding Producto.price}" Grid.Column="1" Grid.Row="2" />
+            <Label 
+                Text="Precio" 
+                Grid.Column="0" 
+                Grid.Row="2" VerticalOptions="Center"/>
+            <Entry 
+                Text="{Binding Producto.price}" 
+                Grid.Column="1" 
+                Grid.Row="2" />
 
-                <Label Text="Categoria" Grid.Column="0" Grid.Row="3" VerticalOptions="Center"/>
-            <Entry Text="{Binding Producto.category}" Grid.Column="1" Grid.Row="3" />
+            <Label 
+                Text="Categoria" 
+                Grid.Column="0" 
+                Grid.Row="3" 
+                VerticalOptions="Center"/>
+            <Entry 
+                Text="{Binding Producto.category}" 
+                Grid.Column="1" 
+                Grid.Row="3" />
 
-                <Label VerticalOptions="Center" Text="{Binding RatingIcon}" FontSize="22" TextColor="Blue" FontFamily="MaterialDesignIcons" Grid.Column="0" Grid.Row="4" />
-                <Entry Text="{Binding Producto.rating.rate}" Grid.Column="1" Grid.Row="4" />
+            <Label 
+                VerticalOptions="Center" 
+                Text="{x:Static models:MaterialIcons.Star}" 
+                FontSize="22" 
+                TextColor="Blue" 
+                FontFamily="MaterialDesignIcons" 
+                Grid.Column="0" 
+                Grid.Row="4" />
+            
+            <Entry 
+                Text="{Binding Producto.rating.rate}" 
+                Grid.Column="1" 
+                Grid.Row="4" />
 
-                <Image Source="{Binding Producto.image}" HeightRequest="300" Grid.ColumnSpan="2" Grid.Row="5"/>
+            <Image 
+                Source="{Binding Producto.image}" 
+                HeightRequest="300" 
+                Grid.ColumnSpan="2" 
+                Grid.Row="5"/>
 
         </Grid>
         
-        <Button Text="Volver a Lista" Margin="0,10" Command="{Binding GoBackCommand}"/>
+        <Button 
+            Text="Volver a Lista" 
+            Margin="0,10" 
+            Command="{Binding GoBackCommand}"/>
+        
     </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
