Ajuste pantall acerca

--- a/AppFakeStore/Views/AcercaPage.xaml
+++ b/AppFakeStore/Views/AcercaPage.xaml
@@ -11,29 +11,18 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
 
-        <Border StrokeShape="RoundRectangle 5" WidthRequest="100" BackgroundColor="Azure">
-            <Border.GestureRecognizers>
-                <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnCounterClicked"/>
-            </Border.GestureRecognizers>
-            <VerticalStackLayout HorizontalOptions="Center" Spacing="5">
-                <Label 
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center"
-                    FontSize="Large" 
-                    TextColor="Red" 
-                    Text="{x:Static models:MaterialIcons.Mail}" 
-                    FontFamily="MaterialDesignIcons"/>
-                <Label  
-                    x:Name="CounterBtn"
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center"
-                    Text="Contacto"/>
-            </VerticalStackLayout>
-        </Border>
-        <Button x:Name="IconBtn" Text="Click me" Clicked="IconBtn_Clicked" WidthRequest="150">
-            <Button.ImageSource>
+
+        <Button x:Name="IconBtn" Margin="0, 10" ContentLayout="Top, 5" Text="Contacto" Clicked="IconBtn_Clicked" WidthRequest="120" HeightRequest="70">
+            <Button.ImageSource >
                 <FontImageSource FontFamily="MaterialDesignIcons" Glyph="&#xe158;" />
             </Button.ImageSource>
         </Button>
+        <Button  x:Name="BackBtn" ContentLayout="Top, 5" Text="Volver" Clicked="BackBtn_Clicked" WidthRequest="120" HeightRequest="70">
+            <Button.ImageSource >
+                <FontImageSource FontFamily="MaterialDesignIcons" Glyph="&#xeba6;"/>
+            </Button.ImageSource>
+        </Button>
+
+        
     </VerticalStackLayout>
 </ContentPage>
